--- a/TODO
+++ b/TODO
@@ -1,3 +1,4 @@
+sync/share GUI and CLI data-structures. Better to share codebase in general
 - cli: update command, delete command, tagging
 - cli: command line parser: wrong position of [options] 
 - ability to set the WHERE condition (allow editing the SQL query)
