--- a/TODO
+++ b/TODO
@@ -1,3 +1,5 @@
+Remove redundant searchresult info (redundant filedata (paths etc:))
+pdfworker: use qtconcurrent
 Consider injecting Logger (default stdout/stderr) to classes instead of using Logger::info()/Logger::error()::
 sync/share GUI and CLI data-structures. Better to share codebase in general
 - cli: update command, delete command, tagging
